<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_delete_document"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Font12Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_document_cannot_be_deleted"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Font10Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/you_need_authorisation_to_delete_this_document_request_authorisation"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/requestAuthorisationTV"
            style="@style/Font12Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_request_authorisation"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/request_authorisation"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/backTV"
            style="@style/Font12Regular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/back"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>