<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRL"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@color/background_gray"
    android:orientation="vertical"
    android:visibility="visible">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/bgMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_bg_edit_document" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/bgMain"
                        app:srcCompat="@drawable/ic_arc_bottom_left" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/saveTV"
                        style="@style/Font12Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/cancelTV"
                        style="@style/Font12Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleTV"
                        style="@style/Font14SemiBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:inputType="textCapWords"
                        android:text="@string/edit_document"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbar"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/subtitleTV"
                            style="@style/Font14SemiBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="textCapWords"
                            android:text="@string/edit_document"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Font12Regular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/short_description"
                                android:textColor="@color/black" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Font12Regular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_3sdp"
                                android:gravity="center"
                                android:text="@string/mandatory_sign"
                                android:textColor="@color/red" />


                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/documentNameET"
                            style="@style/Font12Regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/edittext_selector"
                            android:hint="@string/short_description"
                            android:imeOptions="actionDone"
                            android:inputType="text|textCapSentences"
                            android:padding="@dimen/_8sdp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Font12Regular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/type"
                                android:textColor="@color/black" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Font12Regular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_3sdp"
                                android:gravity="center"
                                android:text="@string/mandatory_sign"
                                android:textColor="@color/red" />


                        </LinearLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_selector"
                                android:entries="@array/typeItems"
                                android:paddingVertical="@dimen/_8sdp" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_35sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:padding="@dimen/_8sdp"
                                app:srcCompat="@drawable/ic_spinner_dropdown" />

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Font12Regular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/status"
                                android:textColor="@color/black" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Font12Regular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_3sdp"
                                android:gravity="center"
                                android:text="@string/mandatory_sign"
                                android:textColor="@color/red" />


                        </LinearLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_selector"
                                android:entries="@array/statusItems"
                                android:paddingVertical="@dimen/_8sdp" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_35sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:padding="@dimen/_8sdp"
                                app:srcCompat="@drawable/ic_spinner_dropdown" />

                        </RelativeLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/createNewCustomerBTN"
                            style="@style/Font12Regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_20sdp"
                            android:background="@drawable/bg_button_primary"
                            android:text="@string/save_document"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
